add html structure

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,40 @@
         <link rel="shortcut icon" href="./public/icon.jpg" sizes="30x30">
     </head>
     <body>
+        <!--Header Section-->
+        <header>
+            <h1>ToanShinoda</h1>
+            <nav>
+                <a href="#about-me">About Me</a>
+                <a href="project">Projects</a>
+                <a href="skill">Skills</a>
+                <a href="contact">Contact</a>
+            </nav>
+        </header>
 
+        <!--Main Section-->
+        <main>
+            <!--About me-->
+            <section id="about-me">
+
+            </section>
+            <!--Project-->
+            <section id="project">
+
+            </section>
+            <!--Skill-->
+            <section id="skill">
+
+            </section>
+            <!--Contact-->
+            <section id="contact">
+
+            </section>
+        </main>
+
+        <!--Footer Section-->
+        <footer>
+
+        </footer>
     </body>
 </html>
