--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,9 @@
             <h1>ToanShinoda</h1>
             <nav>
                 <a href="#about-me">About Me</a>
-                <a href="project">Projects</a>
-                <a href="skill">Skills</a>
-                <a href="contact">Contact</a>
+                <a href="#project">Projects</a>
+                <a href="#skill">Skills</a>
+                <a href="#contact">Contact</a>
             </nav>
         </header>
 
