--- a/portfolio.html
+++ b/portfolio.html
@@ -43,19 +43,31 @@
                 <ol>
                     <li id="game1">
                         <h3>Genshin Impact</h3>
-                        <img src="./public/GI-profile.png">
+                        <div>
+                            <img src="./public/GI-profile.png">
+                            <p>Ganyu Best Waifu! Save for Yae Miko!!!</p>
+                        </div>
                     </li>
                     <li id="game2">
                         <h3>Love Live! School Idol Festival All Star</h3>
-                        <img src="./public/LLSIF-AS-profile.png">
+                        <div>
+                            <img src="./public/LLSIF-AS-profile.png">
+                            <p>Maki, Kotori, Umi, Eri, You, Kanata, Setsuna, Shioriko, Lanzhu is my waifu</p>
+                        </div> 
                     </li>
                     <li id="game3">
                         <h3>League of Legend</h3>
-                        <img src="./public/LOL-profile.png">
+                        <div>
+                            <img src="./public/LOL-profile.png">
+                            <p>Silver 1. Mastery 7 LeeSin, Rengar, Graves, Twisted Fate, Gwen.</p>
+                        </div>   
                     </li>
                     <li id="game4">
                         <h3>Summer Pockets</h3>
-                        <img>
+                        <div>
+                            <img>
+                            <p>Clear 81%. Unlock Shiroha, Ao, Tsumugi, Kamome, Alka, Pockets</p>
+                        </div>
                     </li>
                 </ol>
             </section>
@@ -63,7 +75,24 @@
             <section id="skill">
                 <h2>Skills</h2>
                 <div>
-
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
+                    <img>
                 </div>
             </section>
         </main>
