--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
             <nav>
                 <a href="./portfolio.html#about-me">About Me</a>
                 <a href="./portfolio.html#game">Games</a>
-                <a href="./portfolio.html#album">Skills</a>
+                <a href="./portfolio.html#album">Album</a>
                 <a href="./contact.html#contact">Contact</a>
             </nav>
         </header>
@@ -71,39 +71,45 @@
                     </li>
                 </ol>
             </section>
-            <!--Skill-->
+            <!--Album-->
             <section id="album">
                 <h2>Skills</h2>
-                <div>
-                    <img src="./public/Aquarium.png">
-                    <img src="./public/Dawn-BlackWhite.jpg">
-                    <img src="./public/Dawn-Yukina.png">
-                    <img src="./public/Elf.png">
-                    <img src="./public/Fall-Yukina.jpg">
-                    <img src="./public/Firework-Mana.png">
-                    <img src="./public/Herb-Claire.png">
-                    <img src="./public/Ichigo.png">
-                    <img src="./public/Idol.jpg">
-                    <img src="./public/Lofi-Saki.jpg">
-                    <img src="./public/NewYear-Mana.png">
-                    <img src="./public/Onsen-Yukina.jpg">
-                    <img src="./public/Pool-Saki.jpg">
-                    <img src="./public/Purplish-Night.jpg">
-                    <img src="./public/Rain.jpg">
-                    <img src="./public/Sakura-Mana.png">
-                    <img src="./public/Sakura-Reina.png">
-                    <img src="./public/School-Festival.jpg">
-                    <img src="./public/Shoukaku.png">
-                    <img src="./public/Sunflower-Erina.png">
-                    <img src="./public/Sunset.png">
-                    <img src="./public/Swimming-pool.png">
-                    <img src="./public/Yukata-Reina.png">
-                </div>
+                <div class="wrapper">
+                    <div class="img-container">
+                        <img src="./public/Aquarium.png">
+                        <img src="./public/Dawn-BlackWhite.jpg">
+                        <img src="./public/Dawn-Yukina.png">
+                        <img src="./public/Elf.png">
+                        <img src="./public/Fall-Yukina.jpg">
+                        <img src="./public/Firework-Mana.png">
+                        <img src="./public/Herb-Claire.png">
+                        <img src="./public/Ichigo.png">
+                        <img src="./public/Idol.jpg">
+                        <img src="./public/Lofi-Saki.jpg">
+                        <img src="./public/NewYear-Mana.png">
+                        <img src="./public/Onsen-Yukina.jpg">
+                        <img src="./public/Pool-Saki.jpg">
+                        <img src="./public/Purplish-Night.jpg">
+                        <img src="./public/Rain.jpg">
+                        <img src="./public/Sakura-Mana.png">
+                        <img src="./public/Sakura-Reina.png">
+                        <img src="./public/School-Festival.jpg">
+                        <img src="./public/Shoukaku.png">
+                        <img src="./public/Sunflower-Erina.png">
+                        <img src="./public/Sunset.png">
+                        <img src="./public/Swimming-pool.png">
+                        <img src="./public/Yukata-Reina.png">
+                    </div>
+                    <div class="render">
+                        <img>
+                    </div>
+                </div>   
             </section>
         </main>
         <!--Footer Section-->
         <footer>
-
+            <h6>#FromVozWithLuv</h6>
+            <h6>No copyright</h6>
         </footer>
     </body>
 </html>
