--- a/portfolio.html
+++ b/portfolio.html
@@ -111,5 +111,6 @@
             <h6>#FromVozWithLuv</h6>
             <h6>No copyright</h6>
         </footer>
+        <script src="./spirit.js"></script>
     </body>
 </html>
