--- a/portfolio.html
+++ b/portfolio.html
@@ -41,28 +41,28 @@
             <section id="game">
                 <h2>Game</h2>
                 <ol>
-                    <li id="game1">
+                    <li>
                         <h3>Genshin Impact</h3>
                         <div>
                             <img src="./public/GI-profile.png">
                             <p>Ganyu Best Waifu! Save for Yae Miko!!!</p>
                         </div>
                     </li>
-                    <li id="game2">
+                    <li>
                         <h3>Love Live! School Idol Festival All Star</h3>
                         <div>
                             <img src="./public/LLSIF-AS-profile.png">
                             <p>Maki, Kotori, Umi, Eri, You, Kanata, Setsuna, Shioriko, Lanzhu is my waifu</p>
                         </div> 
                     </li>
-                    <li id="game3">
+                    <li>
                         <h3>League of Legend</h3>
                         <div>
                             <img src="./public/LOL-profile.png">
                             <p>Silver 1. Mastery 7 LeeSin, Rengar, Graves, Twisted Fate, Gwen.</p>
                         </div>   
                     </li>
-                    <li id="game4">
+                    <li>
                         <h3>Summer Pockets</h3>
                         <div>
                             <img>
@@ -112,5 +112,6 @@
             <h6>No copyright</h6>
         </footer>
         <script src="./spirit.js"></script>
+        <script src="./game.js"></script>
     </body>
 </html>
