--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
                         <img src="./public/Yukata-Reina.png">
                     </div>
                     <div class="render">
-                        <img>
+                        <img id="render-img" src="./public/Aquarium.png">
                     </div>
                 </div>   
             </section>
