--- a/portfolio.html
+++ b/portfolio.html
@@ -75,30 +75,41 @@
             <section id="album">
                 <h2>Skills</h2>
                 <div class="wrapper">
-                    <div class="img-container">
-                        <img src="./public/Aquarium.png">
-                        <img src="./public/Dawn-BlackWhite.jpg">
-                        <img src="./public/Dawn-Yukina.png">
-                        <img src="./public/Elf.png">
-                        <img src="./public/Fall-Yukina.jpg">
-                        <img src="./public/Firework-Mana.png">
-                        <img src="./public/Herb-Claire.png">
-                        <img src="./public/Ichigo.png">
-                        <img src="./public/Idol.jpg">
-                        <img src="./public/Lofi-Saki.jpg">
-                        <img src="./public/NewYear-Mana.png">
-                        <img src="./public/Onsen-Yukina.jpg">
-                        <img src="./public/Pool-Saki.jpg">
-                        <img src="./public/Purplish-Night.jpg">
-                        <img src="./public/Rain.jpg">
-                        <img src="./public/Sakura-Mana.png">
-                        <img src="./public/Sakura-Reina.png">
-                        <img src="./public/School-Festival.jpg">
-                        <img src="./public/Shoukaku.png">
-                        <img src="./public/Sunflower-Erina.png">
-                        <img src="./public/Sunset.png">
-                        <img src="./public/Swimming-pool.png">
-                        <img src="./public/Yukata-Reina.png">
+                    <div class="container">
+                        <img id="left" class="arrow left" src="./public/left-arrow.png">
+
+                        <div class="no-display-left">
+
+                        </div>
+                        <div class="displaying">
+                            <img src="./public/Aquarium.png">
+                            <img src="./public/Dawn-BlackWhite.jpg">
+                            <img src="./public/Dawn-Yukina.png">
+                            <img src="./public/Elf.png">
+                            <img src="./public/Fall-Yukina.jpg">
+                            <img src="./public/Firework-Mana.png">
+                            <img src="./public/Herb-Claire.png">
+                            <img src="./public/Ichigo.png">
+                            <img src="./public/Idol.jpg">
+                            <img src="./public/Lofi-Saki.jpg">
+                            <img src="./public/NewYear-Mana.png">
+                        </div>
+                        <div class="no-display-right">
+                            <img src="./public/Onsen-Yukina.jpg">
+                            <img src="./public/Pool-Saki.jpg">
+                            <img src="./public/Purplish-Night.jpg">
+                            <img src="./public/Rain.jpg">
+                            <img src="./public/Sakura-Mana.png">
+                            <img src="./public/Sakura-Reina.png">
+                            <img src="./public/School-Festival.jpg">
+                            <img src="./public/Shoukaku.png">
+                            <img src="./public/Sunflower-Erina.png">
+                            <img src="./public/Sunset.png">
+                            <img src="./public/Swimming-pool.png">
+                            <img src="./public/Yukata-Reina.png">
+                        </div>
+
+                        <img id="right" class="arrow right" src="./public/right-arrow.png">
                     </div>
                     <div class="render">
                         <img id="render-img" src="./public/Aquarium.png">
@@ -113,5 +124,6 @@
         </footer>
         <script src="./spirit.js"></script>
         <script src="./game.js"></script>
+        <script src="./album.js"></script>
     </body>
 </html>
