--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,9 @@
                 <h2>Contact</h2>
                 <p>Interesting ? Please contact me</p>
                 <div>
-                    
+                    <a href="https://www.facebook.com/trong.toan.562" target="_blank"><img src="./public/facebook.png"></a>
+                    <a href="https://twitter.com/Phamtrongtoan3" target="_blank"><img src="./public/twitter.png"></a>
+                    <a href="https://github.com/Toan1251" target="_blank"><img src="./public/github.png"></a>
                 </div>
             </section>
         </main>
