--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,8 @@
                     <li>
                         <h3>Summer Pockets</h3>
                         <div>
-                            <img>
-                            <p>Clear 81%. Unlock Shiroha, Ao, Tsumugi, Kamome, Alka, Pockets Route</p>
+                            <img src="./public/SP-profile.png">
+                            <p>Clear 85%. Unlock Shiroha, Ao, Tsumugi, Kamome, Alka, Pockets Route</p>
                         </div>
                     </li>
                 </ol>
@@ -122,8 +122,8 @@
             <h6>#FromVozWithLuv</h6>
             <h6>No copyright</h6>
         </footer>
-        <script src="./spirit.js"></script>
-        <script src="./game.js"></script>
-        <script src="./album.js"></script>
+        <script src="./script/spirit.js"></script>
+        <script src="./script/game.js"></script>
+        <script src="./script/album.js"></script>
     </body>
 </html>
