--- a/contact.html
+++ b/contact.html
@@ -3,20 +3,20 @@
     <head>
         <title>Portfolio project</title>
         <link rel="stylesheet" href="./style.css">
-        <link rel="shortcut icon" href="./public/icon.jpg" sizes="30x30">
+        <link rel="shortcut icon" href="./resouces/icon.jpg" sizes="30x30">
     </head>
     <body>
         <!--Header Section-->
         <header>
             <div class="logo">
-                <img src="./public/penguin.jpg">
+                <img src="./resouces/penguin.jpg">
                 <h1>ToanShinoda</h1>
             </div>
             
             <nav>
                 <a href="./portfolio.html#about-me">About Me</a>
                 <a href="./portfolio.html#game">Games</a>
-                <a href="./portfolio.html#skill">Skills</a>
+                <a href="./portfolio.html#album">Album</a>
                 <a href="./contact.html#contact">Contact</a>
             </nav>
         </header>
@@ -26,11 +26,15 @@
                 <h2>Contact</h2>
                 <p>Interesting ? Please contact me</p>
                 <div>
-                    <a href="https://www.facebook.com/trong.toan.562" target="_blank"><img src="./public/facebook.png"></a>
-                    <a href="https://twitter.com/Phamtrongtoan3" target="_blank"><img src="./public/twitter.png"></a>
-                    <a href="https://github.com/Toan1251" target="_blank"><img src="./public/github.png"></a>
+                    <a href="https://www.facebook.com/trong.toan.562" target="_blank"><img src="./resouces/facebook.png"></a>
+                    <a href="https://twitter.com/Phamtrongtoan3" target="_blank"><img src="./resouces/twitter.png"></a>
+                    <a href="https://github.com/Toan1251" target="_blank"><img src="./resouces/github.png"></a>
                 </div>
             </section>
         </main>
+        <footer>
+            <h6>#FromVozWithLuv</h6>
+            <h6>No copyright</h6>
+        </footer>
     </body>
 </html>
