--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
             </div>
             
             <nav>
-                <a href="./portfolio.html#about-me">About Me</a>
-                <a href="./portfolio.html#game">Games</a>
-                <a href="./portfolio.html#album">Album</a>
+                <a href="./index.html#about-me">About Me</a>
+                <a href="./index.html#game">Games</a>
+                <a href="./index.html#album">Album</a>
                 <a href="./contact.html#contact">Contact</a>
             </nav>
         </header>
